--- a/Shop.MVP.Web/Shop.MVP.Web.csproj
+++ b/Shop.MVP.Web/Shop.MVP.Web.csproj
@@ -21,6 +21,7 @@
     <IISExpressUseClassicPipelineMode />
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <TargetFrameworkProfile />
+    <WebGreaseLibPath>..\packages\WebGrease.1.5.2\lib</WebGreaseLibPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -42,8 +43,14 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Antlr3.Runtime">
+      <HintPath>..\packages\Antlr.3.4.1.9004\lib\Antlr3.Runtime.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.AspNet.FriendlyUrls">
       <HintPath>..\packages\Microsoft.AspNet.FriendlyUrls.Core.1.0.2\lib\net45\Microsoft.AspNet.FriendlyUrls.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.AspNet.Web.Optimization.WebForms">
+      <HintPath>..\packages\Microsoft.AspNet.Web.Optimization.WebForms.1.1.3\lib\net45\Microsoft.AspNet.Web.Optimization.WebForms.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.EnterpriseLibrary.Caching">
       <HintPath>..\packages\EnterpriseLibrary.Caching.5.0.505.0\lib\NET35\Microsoft.Practices.EnterpriseLibrary.Caching.dll</HintPath>
@@ -66,6 +73,13 @@
     <Reference Include="Microsoft.Practices.Unity.Interception.Configuration">
       <HintPath>..\packages\Unity.Interception.2.1.505.0\lib\NET35\Microsoft.Practices.Unity.Interception.Configuration.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.5.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
@@ -76,23 +90,67 @@
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Optimization">
+      <HintPath>..\packages\Microsoft.AspNet.Web.Optimization.1.1.3\lib\net40\System.Web.Optimization.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
     <Reference Include="System.Web.Mobile" />
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="WebGrease">
+      <HintPath>..\packages\WebGrease.1.5.2\lib\WebGrease.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Catalogo.aspx" />
+    <Content Include="Css\delicious\delicious-bold-demo.html" />
+    <Content Include="Css\delicious\delicious-bold-webfont.svg" />
+    <Content Include="Css\delicious\delicious-bolditalic-demo.html" />
+    <Content Include="Css\delicious\delicious-bolditalic-webfont.svg" />
+    <Content Include="Css\delicious\delicious-heavy-demo.html" />
+    <Content Include="Css\delicious\delicious-heavy-webfont.svg" />
+    <Content Include="Css\delicious\delicious-italic-demo.html" />
+    <Content Include="Css\delicious\delicious-italic-webfont.svg" />
+    <Content Include="Css\delicious\delicious-roman-demo.html" />
+    <Content Include="Css\delicious\delicious-roman-webfont.svg" />
+    <Content Include="Css\delicious\delicious-smallcaps-demo.html" />
+    <Content Include="Css\delicious\delicious-smallcaps-webfont.svg" />
+    <Content Include="Css\delicious\generator_config.txt" />
+    <Content Include="Css\delicious\specimen_files\delicious-bold-cleartype.png" />
+    <Content Include="Css\delicious\specimen_files\delicious-bolditalic-cleartype.png" />
+    <Content Include="Css\delicious\specimen_files\delicious-heavy-cleartype.png" />
+    <Content Include="Css\delicious\specimen_files\delicious-italic-cleartype.png" />
+    <Content Include="Css\delicious\specimen_files\delicious-roman-cleartype.png" />
+    <Content Include="Css\delicious\specimen_files\delicious-smallcaps-cleartype.png" />
+    <Content Include="Css\delicious\specimen_files\easytabs.js" />
+    <Content Include="Css\delicious\specimen_files\grid_12-825-55-15.css" />
+    <Content Include="Css\delicious\specimen_files\specimen_stylesheet.css" />
+    <Content Include="Css\delicious\stylesheet.css" />
+    <Content Include="Css\jquery.slider.css" />
+    <Content Include="Css\prettyPhoto.css" />
+    <Content Include="Css\slider.css" />
+    <Content Include="Css\style.css" />
     <Content Include="Default.aspx" />
+    <Content Include="Global.asax" />
+    <Content Include="Scripts\custom.js" />
     <Content Include="Scripts\jquery-1.7.1.intellisense.js" />
     <Content Include="Scripts\jquery-1.7.1.js" />
     <Content Include="Scripts\jquery-1.7.1.min.js" />
+    <Content Include="Scripts\jquery.prettyPhoto.js" />
+    <Content Include="Scripts\jquery.slider.js" />
+    <Content Include="Scripts\slider.js" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_GlobalResources\Resources.designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Catalogo.aspx.cs">
       <DependentUpon>Catalogo.aspx</DependentUpon>
@@ -102,14 +160,22 @@
       <DependentUpon>Catalogo.aspx</DependentUpon>
     </Compile>
     <Compile Include="Default.aspx.cs">
-      <SubType>ASPXCodeBehind</SubType>
       <DependentUpon>Default.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Models\CategoryAssignedProductViewModel.cs" />
-    <Compile Include="Presenters\CatalogoPresenter.cs" />
+    <Compile Include="Global.asax.cs">
+      <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="MasterPages\Shop.Master.cs">
+      <DependentUpon>Shop.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MasterPages\Shop.Master.designer.cs">
+      <DependentUpon>Shop.Master</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Mobile.Master.cs">
       <DependentUpon>Site.Mobile.Master</DependentUpon>
@@ -125,16 +191,32 @@
     <Compile Include="ViewSwitcher.ascx.designer.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
     </Compile>
-    <Compile Include="Views\ICatalogoView.cs" />
-    <Compile Include="Views\IGameListView.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="MasterPages\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
     <Content Include="Site.Mobile.Master" />
+    <Content Include="MasterPages\Shop.Master" />
+    <Content Include="Css\delicious\delicious-bold-webfont.eot" />
+    <Content Include="Css\delicious\delicious-bold-webfont.ttf" />
+    <Content Include="Css\delicious\delicious-bold-webfont.woff" />
+    <Content Include="Css\delicious\delicious-bolditalic-webfont.eot" />
+    <Content Include="Css\delicious\delicious-bolditalic-webfont.ttf" />
+    <Content Include="Css\delicious\delicious-bolditalic-webfont.woff" />
+    <Content Include="Css\delicious\delicious-heavy-webfont.eot" />
+    <Content Include="Css\delicious\delicious-heavy-webfont.ttf" />
+    <Content Include="Css\delicious\delicious-heavy-webfont.woff" />
+    <Content Include="Css\delicious\delicious-italic-webfont.eot" />
+    <Content Include="Css\delicious\delicious-italic-webfont.ttf" />
+    <Content Include="Css\delicious\delicious-italic-webfont.woff" />
+    <Content Include="Css\delicious\delicious-roman-webfont.eot" />
+    <Content Include="Css\delicious\delicious-roman-webfont.ttf" />
+    <Content Include="Css\delicious\delicious-roman-webfont.woff" />
+    <Content Include="Css\delicious\delicious-smallcaps-webfont.eot" />
+    <Content Include="Css\delicious\delicious-smallcaps-webfont.ttf" />
+    <Content Include="Css\delicious\delicious-smallcaps-webfont.woff" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -147,6 +229,13 @@
       <Project>{5F081B09-2791-4F75-B3B1-4396CA89E8B6}</Project>
       <Name>Ez.Newsletter.MagentoApi</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="App_GlobalResources\Resources.resx">
+      <Generator>GlobalResourceProxyGenerator</Generator>
+      <LastGenOutput>Resources.designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
